fix centered image problem on mobile

--- a/cerci_frontend/static/css/issuecontent.css
+++ b/cerci_frontend/static/css/issuecontent.css
@@ -180,6 +180,8 @@ img.ortala {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    width: 100% !important;
+    height: auto !important;
 }
 
 @media (max-width: 767px) {
